// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default render 1`] = `
<div class="Cell">
  <!---->
  <div class="container">
    <div class="body"></div>
    <!---->
  </div>
</div>
`;

exports[`editable 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2> <button class="header-button">
      <v-icon-stub name="ellipsis-h"></v-icon-stub>
    </button>
  </header>
  <div class="container">
    <div class="body"></div>
    <!---->
  </div>
</div>
`;

exports[`toggle settings 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2> <button class="header-button _toggled">
      <v-icon-stub name="ellipsis-h"></v-icon-stub>
    </button>
  </header>
  <div class="container">
    <div class="body"></div>
    <cellsettings-stub name="revealSettings"></cellsettings-stub>
  </div>
</div>
`;

exports[`with content in props 1`] = `
<div class="Cell">
  <!---->
  <div class="container">
    <div class="body u-grid-2-x">
      <customcomponent-stub foo="custom-prop" class="body-item"></customcomponent-stub>
      <customcomponent-stub bar="2" class="body-item"></customcomponent-stub>
    </div>
    <!---->
  </div>
</div>
`;

exports[`with content in slots 1`] = `
<div class="Cell">
  <!---->
  <div class="container">
    <div class="body u-grid-3-x">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`with title 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2>
    <!---->
  </header>
  <div class="container">
    <div class="body"></div>
    <!---->
  </div>
</div>
`;
